--- a/Style/style.css
+++ b/Style/style.css
@@ -82,6 +82,24 @@ header nav{
     justify-content: center;
     align-items: center;
 }
+.sponser-container{
+    margin-top: 69px;
+    margin-bottom: 100px;
+}
+.sponsor{
+    max-width: 1110px;
+    display: grid;
+    grid-template-columns: repeat(7,1fr);
+    margin: 0 auto;
+    padding: 35px 62px;
+}
+
+
+
+
+
+
+/* ************************************************************************************************************************************************************** */
 
 @media screen and (width<576px) {
     .nav{
@@ -116,5 +134,17 @@ header nav{
     .header-info h2{
         font-size: 1.75rem;
         width: 100%;
+    }
+    .sponser-container{
+        width: 100%;
+        margin-left: 10px;
+        margin-top: 0px;
+    }
+    .sponsor{
+        grid-template-columns: repeat(4,1fr);
+        gap:10px;
+        margin-top: 0;
+        width: 100%;
+        padding: 0;
     }
 }
